Possible compatibility problems with earlier versions marked with '*'.

Added support for SRW scan in yaz-client.

* Changed Z_SRW_scanRequest to be able to carry both CCL and PQF.

Fixed NMEM system to return aligned blocks on the smallest boundaries
that are suitably aligned for all possible types on the particular
architecture YAZ is being built for.

--- 2.0.30 2005/01/04 

Fixed numerious warnings that was issued with newer versions of GCC.

Fixed NMEM system to return aligned blocks on 8 byte boundaries rather
than 4 bytes, since 4 may not be enough on some systems such as GCC 3.4.3
on Solaris.

Make YAZ Generic Frontend Server slightly faster.

Enhance (and reduce) logging for Generic Frontend Server.

Revert YAZ log system so that it flushes every write operation
by default. (YAZ 2.0.26 and earlier verisons did that). Bug #240.

Modified the YAZ logging system. The LOG level defines use YLOG_ prefix
instead of LOG_, due to name clash with syslog(3). LOG_ are still
present. New applications should define YAZ_USE_NEW_LOG=1 - this
will effectively disable old definitions.

--- 2.0.28 2004/11/09 

Added yaz_log_time_format which specifies log format using
strftime(3).

Added yaz_log_module_level which returns mask for a module. Value
is non-zero mask a if module is enabled; zero if disabled.

* Fixed bug #148: CQL parser may leak. A few prototypes were changed
in include/yaz/cql.h.

Fixed bug #176: Dont throw diagnostics on empty SRU args.

Fixed bug #175: surrogate diagnostics in SRW lacking NS.

Fixed bug #172: RPM builds does not enable SSL.

Doxyfile.in part of dist. Doxyfile generated by configure.

Configure aborts if any of --with-xml2, --with-openssl, --enable-tcpd 
are given and the corresponding component does not exist.

Extend CCL documentation in YAZ reference. Describe r=r.

--- 2.0.26 2004/10/01

Fixed MARC->MARCXML conversion to properly deal with
fields, subfields, indicators having non-ASCII characters.
